should fix the editor alignment

--- a/css/sass/includes/_editor.scss
+++ b/css/sass/includes/_editor.scss
@@ -6,12 +6,12 @@
 	height: 0;
 
 	.block {
-		width: 32.66%;
+		width: 32%;
 		display: inline-block;
-		float: left;
 		margin: 0 auto;
 		text-align: left;
 		cursor: text;
+		height: 0;
 		
 		textarea {
 			background: $chalk;
